--- a/src/shared/components/layout/sidebar.module.css
+++ b/src/shared/components/layout/sidebar.module.css
@@ -1,3 +1,23 @@
-.side-bar{
-  color: red 
+.sidebar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-items: baseline;
+}
+
+.sidebar li {
+  margin-left: 3rem;
+  
+}
+
+.sidebar a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: #0c0a72;
+}
+
+.sidebar a:hover,
+.sidebar a:active,
+.sidebar a.active {
+  color: rgb(146, 107, 112);
 }
